--- a/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.power.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.power.html
@@ -63,7 +63,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\LCDAir_pre1.cst</td>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\SPIlcd_prj.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Fri May 17 05:19:43 2024
+<td>Tue May 21 01:55:13 2024
 </td>
 </tr>
 <tr>
@@ -96,15 +96,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>13.363</td>
+<td>14.729</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
-<td>8.694</td>
+<td>9.018</td>
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>4.669</td>
+<td>5.711</td>
 </tr>
 <tr>
 <td class="label">Psram Power (mW)</td>
@@ -115,7 +115,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.292</td>
+<td>25.318</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.708</td>
+<td>84.682</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -192,23 +192,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.200</td>
-<td>3.151</td>
-<td>1.990</td>
-<td>6.169</td>
+<td>3.431</td>
+<td>2.090</td>
+<td>6.625</td>
 </tr>
 <tr>
 <td>VCCX</td>
 <td>2.500</td>
-<td>0.159</td>
+<td>0.323</td>
 <td>2.424</td>
-<td>6.457</td>
+<td>6.869</td>
 </tr>
 <tr>
 <td>VCCO18</td>
 <td>1.800</td>
-<td>0.022</td>
-<td>0.013</td>
-<td>0.062</td>
+<td>0.186</td>
+<td>0.126</td>
+<td>0.560</td>
 </tr>
 <tr>
 <td>VCCO33</td>
@@ -229,15 +229,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>0.151</td>
+<td>0.291</td>
 <td>NA</td>
-<td>12.536</td>
+<td>12.477</td>
 </tr>
 <tr>
 <td>IO</td>
-<td>1.622
-<td>0.544
-<td>12.750
+<td>3.150
+<td>1.168
+<td>12.620
 </tr>
 <tr>
 <td>BSRAM</td>
@@ -261,32 +261,44 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>spi_st7735lcd</td>
-<td>3.584</td>
-<td>3.584(3.584)</td>
+<td>3.724</td>
+<td>3.724(3.723)</td>
+<tr>
+<td>spi_st7735lcd/decoder/</td>
+<td>0.048</td>
+<td>0.048(0.000)</td>
 <tr>
 <td>spi_st7735lcd/lcd_init_inst/</td>
-<td>0.071</td>
-<td>0.071(0.000)</td>
+<td>0.066</td>
+<td>0.066(0.000)</td>
 <tr>
 <td>spi_st7735lcd/lcd_show_char_inst/</td>
-<td>0.682</td>
-<td>0.682(0.635)</td>
+<td>0.684</td>
+<td>0.684(0.635)</td>
 <tr>
-<td>spi_st7735lcd/lcd_show_char_inst/your_instance_name/</td>
+<td>spi_st7735lcd/lcd_show_char_inst/ascii_prom/</td>
 <td>0.635</td>
 <td>0.635(0.000)</td>
 <tr>
 <td>spi_st7735lcd/lcd_write_inst/</td>
-<td>0.012</td>
-<td>0.012(0.000)</td>
+<td>0.011</td>
+<td>0.011(0.000)</td>
+<tr>
+<td>spi_st7735lcd/led_show/</td>
+<td>0.002</td>
+<td>0.002(0.000)</td>
+<tr>
+<td>spi_st7735lcd/music/</td>
+<td>0.039</td>
+<td>0.039(0.000)</td>
 <tr>
 <td>spi_st7735lcd/muxcontrol_inst/</td>
 <td>0.005</td>
 <td>0.005(0.000)</td>
 <tr>
 <td>spi_st7735lcd/show_string_number_inst/</td>
-<td>0.017</td>
-<td>0.017(0.000)</td>
+<td>0.071</td>
+<td>0.071(0.000)</td>
 <tr>
 <td>spi_st7735lcd/uPLL/</td>
 <td>2.797</td>
@@ -302,7 +314,12 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
 <td>100.286</td>
-<td>0.794</td>
+<td>0.932</td>
+</tr>
+<tr>
+<td>NO CLOCK DOMAIN</td>
+<td>0.000</td>
+<td>0.000</td>
 </tr>
 <tr>
 <td>xtal_clk</td>
