更改部分代码

--- a/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.rpt.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.rpt.html
@@ -79,7 +79,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Tue May 21 09:45:43 2024
+<td>Tue May 21 13:51:02 2024
 </td>
 </tr>
 <tr>
@@ -93,23 +93,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 0.044s, Elapsed time = 0h 0m 0.044s
-   Placement Phase 1: CPU time = 0h 0m 0.068s, Elapsed time = 0h 0m 0.069s
-   Placement Phase 2: CPU time = 0h 0m 0.051s, Elapsed time = 0h 0m 0.051s
-   Placement Phase 3: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
-   Total Placement: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
+   Placement Phase 0: CPU time = 0h 0m 0.046s, Elapsed time = 0h 0m 0.046s
+   Placement Phase 1: CPU time = 0h 0m 0.069s, Elapsed time = 0h 0m 0.069s
+   Placement Phase 2: CPU time = 0h 0m 0.07s, Elapsed time = 0h 0m 0.069s
+   Placement Phase 3: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
+   Total Placement: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
 Running routing:
-   Routing Phase 0: CPU time = 0h 0m 0.001s, Elapsed time = 0h 0m 0s
-   Routing Phase 1: CPU time = 0h 0m 0.196s, Elapsed time = 0h 0m 0.196s
-   Routing Phase 2: CPU time = 0h 0m 0.406s, Elapsed time = 0h 0m 0.406s
-   Total Routing: CPU time = 0h 0m 0.603s, Elapsed time = 0h 0m 0.602s
+   Routing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
+   Routing Phase 1: CPU time = 0h 0m 0.193s, Elapsed time = 0h 0m 0.193s
+   Routing Phase 2: CPU time = 0h 0m 0.559s, Elapsed time = 0h 0m 0.559s
+   Total Routing: CPU time = 0h 0m 0.752s, Elapsed time = 0h 0m 0.752s
 Generate output files:
    CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 4s, Elapsed time = 0h 0m 4s, Peak memory usage = 245MB</td>
+<td>CPU time = 0h 0m 5s, Elapsed time = 0h 0m 5s, Peak memory usage = 292MB</td>
 </tr>
 </table>
 <br/>
@@ -124,12 +124,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>765/8640</td>
-<td>8%</td>
+<td>799/8640</td>
+<td>9%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --LUT,ALU,ROM16</td>
-<td>765(738 LUT, 27 ALU, 0 ROM16)</td>
+<td>799(772 LUT, 27 ALU, 0 ROM16)</td>
 <td>-</td>
 </tr>
 <tr>
@@ -139,7 +139,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>262/6693</td>
+<td>263/6693</td>
 <td>3%</td>
 </tr>
 <tr>
@@ -149,7 +149,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as FF</td>
-<td>249/6480</td>
+<td>250/6480</td>
 <td>3%</td>
 </tr>
 <tr>
@@ -164,7 +164,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>433/4320</td>
+<td>463/4320</td>
 <td>10%</td>
 </tr>
 <tr>
@@ -284,7 +284,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">SECONDARY</td>
-<td>1/8(12%)</td>
+<td>2/8(25%)</td>
 </tr>
 <tr>
 <td class="label">GCLK_PIN</td>
@@ -318,6 +318,11 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">sys_rst_n_d</td>
+<td>SECONDARY</td>
+<td> -</td>
+</tr>
+<tr>
+<td class="label">n72_5</td>
 <td>SECONDARY</td>
 <td> -</td>
 </tr>
