--- a/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource.html
@@ -50,7 +50,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">68</td>
 <td align = "center">-</td>
-<td align = "center">220</td>
+<td align = "center">259</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -59,7 +59,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">10</td>
 <td align = "center">-</td>
-<td align = "center">12</td>
+<td align = "center">13</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -73,11 +73,11 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--show_string_number_inst
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--keyboard_mode_show
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
-<td align = "center">27</td>
-<td align = "center">14</td>
-<td align = "center">90</td>
+<td align = "center">28</td>
+<td align = "center">15</td>
+<td align = "center">94</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -86,7 +86,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">53</td>
 <td align = "center">9</td>
-<td align = "center">88</td>
+<td align = "center">104</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -104,7 +104,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">54</td>
 <td align = "center">-</td>
-<td align = "center">162</td>
+<td align = "center">134</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -113,7 +113,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">24</td>
 <td align = "center">-</td>
-<td align = "center">130</td>
+<td align = "center">132</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
